# AI

./: create_symlinks.py  meson.build
projects/search/: config.cfg  main.cpp  main.hpp  meson.build
projects/shared/: actions.hpp
projects/shared/components/: renderable.hpp  transform.hpp
projects/shared/models/: colors.mtl
projects/shared/shaders/: basic.frag  basic.vert  shadow.vert
projects/shared/systems/: camera_controller.hpp  renderer.hpp
subprojects/: the_chariot.wrap
