project(
  'AI',
  'cpp',
  version: '0.0.0',
  default_options: [
    'cpp_std=c++20',
    'buildtype=debugoptimized',
  ]
)

# Dependencies
# -----------------------------------------------------------------------------

the_chariot_dep = dependency('the_chariot', required: true)


# Dependencies
# -----------------------------------------------------------------------------

subdir('projects/search')